# sarsa

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  TASKS.md
.claude/: settings.json
cmake/: CompilerWarnings.cmake
src/editor/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  assert.cpp  crash_handler.cpp  engine.cpp  fixed_timestep.cpp  log.cpp  memory_diagnostics.cpp  window.cpp
src/engine/include/sarsa/: assert.h  crash_handler.h  engine.h  fixed_timestep.h  log.h  memory_diagnostics.h  window.h
src/game/: CMakeLists.txt  game_module.cpp
src/game/include/sarsa/: game_module.h
src/tests/: CMakeLists.txt  assert_tests.cpp  fixed_timestep_tests.cpp  log_tests.cpp  memory_diagnostics_tests.cpp  test_framework.h  test_main.cpp
